--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.bootstrap-servers=localhost:9092
+kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
 
 server.port=8085
